--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -8,4 +8,10 @@
         android:title="SampleTwo"/>
     <item android:id="@+id/three"
         android:title="GlideTest"/>
+    <item android:id="@+id/mytest"
+        android:title="MyTest" />
+    <item android:id="@+id/custom"
+        android:title="Custom" />
+    <item android:id="@+id/bigview"
+        android:title="Bigview" />
 </menu>
