--- a/app/src/main/res/layout/activity_big_view.xml
+++ b/app/src/main/res/layout/activity_big_view.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".BigViewActivity">
 
+    <com.dingmouren.paletteimageview.BigView
+        android:id="@+id/bigview"
+        android:layout_width="300dp"
+        android:layout_height="300dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
