--- a/paletteimageview/src/main/res/values/attr.xml
+++ b/paletteimageview/src/main/res/values/attr.xml
@@ -10,4 +10,13 @@
         <attr name="paletteShadowRadius" format="dimension" />
 
     </declare-styleable>
+
+    <declare-styleable name="CustomView" >
+        <attr name="UnreachedColor" format="color" />
+        <attr name="ReachedColor" format="color" />
+        <attr name="InnerTextColor" format="color" />
+        <attr name="InnerTextSize" format="dimension" />
+        <attr name="Progress" format="integer" />
+    </declare-styleable>
+
 </resources>
