--- a/app/src/main/res/layout/activity_sample_one.xml
+++ b/app/src/main/res/layout/activity_sample_one.xml
@@ -22,7 +22,7 @@
             android:textStyle="bold"
             />
     </RelativeLayout>
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
