--- a/app/src/main/res/layout/activity_sample_two.xml
+++ b/app/src/main/res/layout/activity_sample_two.xml
@@ -19,7 +19,7 @@
             android:textStyle="bold"
             />
     </RelativeLayout>
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
